// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrHeadingSerif > default configuration > renders correctly 1`] = `
<h1
  class="cdr-heading-serif"
  style="--cdr-heading-serif-font-size: var(--cdr-type-scale-5); --cdr-heading-line-height: var(--cdr-line-height-ratio-heading-5); --cdr-heading-serif-font-weight: 400;"
>
  
  paragraph
  
</h1>
`;

exports[`CdrHeadingSerif > passing a scale > renders correctly 1`] = `
<h1
  class="cdr-heading-serif"
  style="--cdr-heading-serif-font-size: var(--cdr-type-scale-1); --cdr-heading-line-height: var(--cdr-line-height-ratio-heading-1); --cdr-heading-serif-font-weight: 400;"
>
  
  paragraph
  
</h1>
`;

exports[`CdrHeadingSerif > passing a scale > renders correctly 2`] = `
<h1
  class="cdr-heading-serif"
  style="--cdr-heading-serif-font-size: var(--cdr-type-scale-5); --cdr-heading-line-height: var(--cdr-line-height-ratio-heading-5); --cdr-heading-serif-font-weight: 600;"
>
  
  paragraph
  
</h1>
`;
